# toeic4all-admin

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  data_loader.py  logger.py  main.py  part5-generation.py  part5_generation.py  pyproject.toml  toeic4all-admin-postman-collection.json  toeic4all-postman-collection.json
app/: .env  config.py  main.py
app/db/: redis_lock.py
app/generation_helpers/: genai_generator.py
app/routes/: part5_routes.py  part6_routes.py  part7_routes.py
app/routes/admin/: part5_routes.py  part6_routes.py  part7_routes.py  system_routes.py
app/routes/api/: part5_api.py
app/schemas/: part5_schemas.py  part6_schemas.py  part7_schemas.py
app/schemas/admin/: part5_schemas.py
app/services/: query_service.py  question_service.py
app/utils/: data_loader.py  db.py
app/utils/fewshots/: part5_examples.py  part6_examples.py  part7_examples.py
app/utils/generation_helpers/: genai_generator.py
app/utils/models/: part5_question.py
app/utils/prompts/: part5.py  part6.py  part7.py
deploy/toeic4all-admin/: Chart.yaml  values.yaml
deploy/toeic4all-admin/templates/: deployment.yaml  service.yaml
fewshots/: part5_examples.py
generation_helpers/: genai_generator.py
models/: part1_question.py  part2_question.py  part5_model.py  part5_question.py  part6_question.py  part7_question.py
prompts/: part5.py  part5_prompt.py
